fixes image overlap in archives

--- a/app/assets/stylesheets/_about.css.scss
+++ b/app/assets/stylesheets/_about.css.scss
@@ -17,6 +17,7 @@
 		flex-flow: row wrap;
 		.grid-item{
 			flex: 0 0 25%;
+			position: relative;
 		}
 	}
 }
