--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -175,7 +175,7 @@ h1{
 		margin-bottom: $lineheight-base * 4;
 	}
 }
-.show-desc, .event-artist-bio, .artist-desc, .static-desc{
+.show-desc, .event-artist-bio, .artist-desc, .static-desc, .previous-editions{
 	margin-right: auto;
 	font-weight: bold;
 	max-width: 70ch;
